Add tooling to track heap space usage and execution time in wpa and modular analysis scripts